// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should disable animations 1`] = `
<button
  class="css-nawv4-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a button 1`] = `
<button
  class="css-1iukreu-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a danger button 1`] = `
<button
  class="css-1q9pz65-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a dark active button 1`] = `
<button
  class="css-vbc5pq-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a dark danger button 1`] = `
<button
  class="css-1ulclz-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a dark disable button 1`] = `
<button
  class="css-1nlmgo5-button denali-button"
  disabled=""
>
  A button
</button>
`;

exports[`Button should render a dark large button 1`] = `
<button
  class="css-1qn56ck-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a dark secondary active button 1`] = `
<button
  class="css-1mkmhwq-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a dark secondary button 1`] = `
<button
  class="css-1sx2370-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a dark secondary disable button 1`] = `
<button
  class="css-1sx2370-button denali-button"
  disabled=""
>
  A button
</button>
`;

exports[`Button should render a dark small button 1`] = `
<button
  class="css-1jm2qag-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a disabled button 1`] = `
<button
  class="css-1iukreu-button denali-button"
  disabled=""
>
  A button
</button>
`;

exports[`Button should render a large button 1`] = `
<button
  class="css-ohfsds-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a secondary active button 1`] = `
<button
  class="css-so1m8l-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a secondary button 1`] = `
<button
  class="css-1pobclq-button denali-button"
>
  A button
</button>
`;

exports[`Button should render a secondary disable button 1`] = `
<button
  class="css-1pobclq-button denali-button"
  disabled=""
>
  A button
</button>
`;

exports[`Button should render a small button 1`] = `
<button
  class="css-1n3qdwa-button denali-button"
>
  A button
</button>
`;

exports[`Button should render an active button 1`] = `
<button
  class="css-a8kbc-button denali-button"
>
  A button
</button>
`;
